// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/IconButton IconButton Playground 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: #175BF5;
  width: 2.875rem;
  background-color: transparent;
  padding: 0;
  height: 2.875rem;
  opacity: 1;
  border-radius: 100%;
  border: solid 0.0625rem rgba(23,91,245,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:focus {
  background-color: rgba(23,91,245,0.1);
}

.emotion-2:hover {
  background-color: #e7eefe;
}

.emotion-2:active {
  background-color: rgba(23,91,245,0.2);
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #175BF5;
  width: 1rem;
  height: 1rem;
}

.emotion-4 path {
  fill: #175BF5;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="icon-button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/IconButton IconButton Sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  width: 2.25rem;
  background-color: #175BF5;
  padding: 0;
  height: 2.25rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:focus {
  background-color: #0946d0;
}

.emotion-2:hover {
  background-color: #1451dc;
}

.emotion-2:active {
  background-color: #07369f;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: white;
  width: 1rem;
  height: 1rem;
}

.emotion-4 path {
  fill: white;
}

.emotion-5 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  width: 2.875rem;
  background-color: #175BF5;
  padding: 0;
  height: 2.875rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5:focus {
  background-color: #0946d0;
}

.emotion-5:hover {
  background-color: #1451dc;
}

.emotion-5:active {
  background-color: #07369f;
}

.emotion-8 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  width: 3.5rem;
  background-color: #175BF5;
  padding: 0;
  height: 3.5rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8:focus {
  background-color: #0946d0;
}

.emotion-8:hover {
  background-color: #1451dc;
}

.emotion-8:active {
  background-color: #07369f;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="icon-button-size-lg"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-5"
        data-testid="icon-button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-8"
        data-testid="icon-button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/IconButton IconButton Types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  width: 2.25rem;
  background-color: #175BF5;
  padding: 0;
  height: 2.25rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:focus {
  background-color: #0946d0;
}

.emotion-2:hover {
  background-color: #1451dc;
}

.emotion-2:active {
  background-color: #07369f;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: white;
  width: 1rem;
  height: 1rem;
}

.emotion-4 path {
  fill: white;
}

.emotion-5 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: black;
  width: 2.25rem;
  background-color: #36C152;
  padding: 0;
  height: 2.25rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5:focus {
  background-color: #2b9941;
}

.emotion-5:hover {
  background-color: #30ad49;
}

.emotion-5:active {
  background-color: #207130;
}

.emotion-7 {
  fill: black;
  width: 1rem;
  height: 1rem;
}

.emotion-7 path {
  fill: black;
}

.emotion-8 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: black;
  width: 2.25rem;
  background-color: #FF1744;
  padding: 0;
  height: 2.25rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8:focus {
  background-color: #e3002c;
}

.emotion-8:hover {
  background-color: #e5143d;
}

.emotion-8:active {
  background-color: #b00022;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="icon-button-size-lg"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-5"
        data-testid="icon-button-size-lg"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-7"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-8"
        data-testid="icon-button-size-lg"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-7"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
